--- a/settings.ini
+++ b/settings.ini
@@ -2,9 +2,12 @@
 DEBUG = False
 SECRET_KEY=django-insecure-pf25rcan8kuh^lirl4bra$3acc3fn=zk1kg#c3y63zi9jzs5k#'
 
+USE_S3 = True
 AWS_ACCESS_KEY_ID=AKIA26OXWGFO7F6NKOFA
 AWS_SECRET_ACCESS_KEY=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
-AWS_STORAGE_BUCKET_NAME=backend-memorial
+AWS_STORAGE_BUCKET_NAME = newbucketmemorial
+AWS_STORAGE_BUCKET_NAME3=bucketmemorial
+AWS_STORAGE_BUCKET_NAME2=backend-memorial
 AWS_S3_FILE_OVERWRITE = False
 AWS_DEFAULT_ACL = None
 DEFAULT_FILE_STORAGE = 'storages.backends.s3boto3.S3Boto3Storage'
